2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* help/*: Localized online docs from Sun's translation team for de, es, fr,
	it, sv, ko, zh_CN, zh_HK and zh_TW.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* docs/*: Remove the old sgml docs since we really don't need them anymore.

2004-02-25  Kevin Vandersloot

	* command_line.c: Don't hard-code the size of the filechooser widget. Also
	save the last folder from the file browser.
	
	* exec.c: NULL the GError to fix crash when running command

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* src/about.c (about_box):
	Set the screen right if the user requests the
	about dialog and it's already there but not
	on the right screen.

2004-02-22  Dennis Smit  <ds@nerds-incorporated.org>

	* src/exec.c (mc_exec_command):
	moved from egg_screen_execute_shell to
	gdk_spawn_on_screen.

	Fixes bug #135158.

2004-02-16  Dennis Smit  <ds@nerds-incorporated.org>
	
	* src/about.c (about_box): use \xc2\xa9 instead of (C) for
	copyright sign.

2004-02-11 Breda McColgan <breda.mccolgan@sun.com>

	* help/C/command-line.xml: Updated for GNOME 2.6.
	* help/C/command-line-C.omf: Updated for GNOME 2.6.
	* help/C/l10n.txt: Updated for GNOME 2.6.

2004-02-08  Jason Leach  <leach@wam.umd.edu>

	* src/Makefile.am (CLEANFILES): Add .server and .server.in here.
        (#132071, Padraig O'Briain)

2004-01-31  Fernando Herrera  <fherrera@onirica.com>

	* src/command_line.c: (file_browser_response_signal): check for NULL
	value from the file selector. Closes bug #132270

2004-01-28  Arvind Samptur  <arvind.samptur@wipro.com>

	* src/about.c: (about_box) Set the screen when creating
	the about dialog.

2004-01-23  Kjartan Maraas  <kmaraas@gnome.org>

	* src/command_line.c: (mc_show_history): Mark string for translation.
	Patch from Maxim Dzumanenko <mvd at mylinu com ua>. Closes bug #132213.

2004-01-18  Jason Leach  <leach@wam.umd.edu>

	* src/Makefile.am (install-data-local): builddir != srcdir fix.
