@@ -9,19 +9,19 @@
     </maintainer>
 <!--
     <title>
-      コマンドラインアプレットのマニュアル (V2.2)
+      コマンドラインアプレットのマニュアル V2.6
     </title>
 -->
     <title>
       コマンドライン
     </title>
     <date>
-      2002-08-01
+      2003-09-22
     </date>
-    <version identifier="2.2" date="2002-08-01" description="GNOME 2.0 用に更新。プログラムバージョン 1.104.0"/>
+    <version identifier="2.6" date="2003-09-22" description="GNOME 2.4 用に更新。プログラムバージョン 2.3.6"/>
     <subject category="GNOME|Applets|Utility"/>
     <description>
-      コマンドラインアプレットユーザーマニュアル
+　コマンドラインアプレットのユーザーマニュアル
     </description>
     <type>
       ユーザーズガイド
