@@ -1,3 +1,4 @@
 Makefile
 Makefile.in
 omf_timestamp
+*.out
