@@ -1,3 +1,8 @@
+2004-03-17  Glynn Foster  <glynn.foster@sun.com>
+
+	* help/ja/*: Put back the ja docs as well since the orignal author didn't
+	get back to me.
+
 2004-03-15  Glynn Foster  <glynn.foster@sun.com>
 
 	* help/*: Localized online docs from Sun's translation team for de, es, fr,
